# sentry-native

./: .clang-format  .codechecker-ignore  .codecov.yml  .craft.yml  .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Makefile  PLAN.md  README.md  README.package.md  azure-pipelines.yml  clang-toolchain.cmake  cloudbuild.yaml  crashpad_wrapper.cpp  crashpad_wrapper.h  crashpad_wrapper.hpp  data.js  example.c  index.html  integration-test-requirements.txt  leak-suppressions.txt  package.sh  sentry-config.cmake.in  sentry-native.sln  sentry.cpp  sentry.h  sentry.pc.in  sentry.rc.in  sentrypad.cpp  sentrypad.h  string.hpp  test-unit.bat  url.cpp  url.hpp  view-hierarchy.json
.cursor/rules/: 01-project-overview.mdc  02-api-design-conventions.mdc  03-testing-practices.mdc  04-backend-architecture.mdc  05-android-ndk-integration.mdc  (+2 more)
.github/: pull_request_template.md
android/: build.sh
azure-pipelines/: build-crashpad.yml  build-platform.yml  install-premake.yml  prescript-common.yml
breakpad/: fetch_breakpad.sh
cmake/: utils.cmake
crashpad/: fetch_crashpad.sh  vars.sh
examples/: example.c  example_crashpad.c  sentry.c  sentry_breakpad.c  sentry_crashpad.c  tracing.c  uef_lock.c
include/: sentry.h  sentry_test_util.h
java/: gradle.properties  settings.gradle
java/sample/: CMakeLists.txt  build.gradle.kts
java/sample/src/main/cpp/: native-sample.cpp
java/sample/src/main/java/io/sentry/ndk/samples/android/: MainActivity.java  NativeSample.java
java/sample/src/main/res/layout/: activity_main.xml
ndk/: Makefile  README.md  build.gradle.kts  gradle.properties  settings.gradle
ndk/lib/: CMakeLists.txt  build.gradle.kts  proguard-rules.pro
ndk/lib/api/: sentry-native-ndk.api
ndk/lib/src/androidTest/java/io/sentry/ndk/: NdkTestHelper.java  SentryNdkTest.java
ndk/lib/src/androidTest/java/io/sentry/ndk/sample/: NdkSample.java  NdkTestHelper.java
ndk/lib/src/androidTest/jni/: ndk-test.cpp
ndk/lib/src/main/: AndroidManifest.xml
ndk/lib/src/main/java/io/sentry/ndk/: DebugImage.java  INativeScope.java  NativeModuleListLoader.java  NativeScope.java  NdkOptions.java  SentryNdk.java  SentryNdkPreloadProvider.java
ndk/lib/src/main/jni/: sentry.c  sentry_android_transport.c
ndk/lib/src/test/java/io/sentry/ndk/: NdkOptionsTest.java
ndk/sample/: CMakeLists.txt  build.gradle.kts
ndk/sample/src/main/: AndroidManifest.xml
ndk/sample/src/main/cpp/: ndk-sample.cpp
ndk/sample/src/main/java/io/sentry/ndk/sample/: MainActivity.java  NdkSample.java
ndk/sample/src/main/res/layout/: activity_main.xml
premake/: .gitignore  README.md  premake5.breakpad.lua  premake5.crashpad.lua  premake5.lua  premake5.sentry.lua  premake5.sentrypad.lua
scripts/: bump-version.sh  extract_minidump.py  git-precommit-hook.sh  install-llvm-mingw.ps1  install-zlib-msvc.ps1  install-zlib.ps1  run-clang-format.py  run_tests.ps1  sentry_ftrace.sh  start-android.sh  stress-test.sh  test_extract_minidump.py  update_test_discovery.ps1
src/: CMakeLists.txt  alloc.hpp  api.cpp  attachment.hpp  backend.hpp  breakpad_backend.cpp  breakpad_macuploader.mm  breakpad_wrapper.cpp  breakpad_wrapper.hpp  cleanup.cpp  cleanup.hpp  crashpad_backend.cpp  crashpad_wrapper.cpp  crashpad_wrapper.hpp  dsn.cpp  dsn.hpp  internal.hpp  io.cpp  io.hpp  json.hpp  macros.hpp  modulefinder.hpp  options.cpp  options.hpp  path.cpp  path.hpp  print_macros.hpp  protocol_value.cpp  protocol_value.hpp  scope.cpp  scope.hpp  sentry.cpp  sentry_alloc.c  sentry_alloc.h  sentry_app_hang.c  sentry_app_hang.h  sentry_app_hang_latch.c  sentry_app_hang_latch.h  sentry_app_hang_monitor.c  sentry_app_hang_monitor.h  (+119 more)
src/backends/native/: CMakeLists.txt  sentry_crash_context.h  sentry_crash_daemon.c  sentry_crash_daemon.h  sentry_crash_handler.c  sentry_crash_handler.h  sentry_crash_ipc.c  sentry_crash_ipc.h  sentry_crash_unwind.h  sentry_crash_unwind_libunwindstack.cpp  sentry_elf.h  sentry_remote_unwind.c  sentry_remote_unwind.h  sentry_wer.c  sentry_wer.def  sentry_wer_report.c  sentry_wer_report.h
src/backends/native/minidump/: sentry_minidump_common.c  sentry_minidump_common.h  sentry_minidump_format.h  sentry_minidump_indirect.c  sentry_minidump_indirect.h  sentry_minidump_linux.c  sentry_minidump_macos.c  sentry_minidump_windows.c  sentry_minidump_writer.h
tests/: __init__.py  assertions.py  benchmark.py  build_config.py  cmake.py  conditions.py  conftest.py  leaks.txt  main.c  main.cpp  proxy.py  requirements.txt  sentry_testsupport.h  test_api.cpp  test_attachments.c  test_basic.c  test_benchmark.py  test_build_static.py  test_capture_minidump.py  test_consent.c  test_consent.cpp  test_database.c  test_dotnet_signals.py  test_dsn.cpp  test_e2e_sentry.py  test_embedded_info.py  test_enhanced_error_reporting.py  test_envelopes.c  test_extract_minidump.py  test_inproc_stress.py  test_integration.c  test_integration.py  test_integration_android.py  test_integration_cache.py  test_integration_client_reports.py  test_integration_crashpad.py  test_integration_gpu.py  test_integration_http.py  test_integration_logger.py  test_integration_logs.py  (+27 more)
tests/fixtures/crash_reporter/: CMakeLists.txt  crash_reporter.c
tests/fixtures/inproc_stress/: CMakeLists.txt  concurrent_crash.c  main.c
tests/unit/: .gitattributes  CMakeLists.txt  benchmark_backend.cpp  benchmark_core.cpp  failing_tests_mingw.inc  fuzz.c  main.c  sentry_testsupport.h  test_app_hang.c  test_attachments.c  test_basic.c  test_before_crash.c  test_cache.c  test_client_report.c  test_concurrency.c  test_consent.c  test_cross_thread_unwind.c  test_database.c  test_embedded_info.c  test_envelopes.c  test_failures.c  test_feedback.c  test_fuzzfailures.c  test_gpu.c  test_info.c  test_logger.c  test_logs.c  test_logs_value_t.c  test_metrics.c  test_modulefinder.c  test_mpack.c  test_native_backend.c  test_options.c  test_os.c  test_os_release.c  test_path.c  test_process.c  test_ratelimiter.c  test_retry.c  test_ringbuffer.c  (+18 more)
toolchains/: msys2-mingw32-pkglist.txt  msys2-pkglist.txt  msys2.cmake
(+234 files in other folders)
